blog prototype complete

--- a/pages/2-SNUST-algorithm-cup-problem-setting.mdx
+++ b/pages/2-SNUST-algorithm-cup-problem-setting.mdx
@@ -1,9 +1,7 @@
 ---
 title: 서울과기대 알고리즘 대회 출제 후기
 tags: [ps]
-categories: [ps, codeforces]
-style: fill
-color: primary
+categories: [problem setting]
 date: 2022-10-21 00:01:00
 description: 이번이 세 번째 대회 출제입니다
 section: "blog1"
