--- a/pages/3-cpp-accmulate.mdx
+++ b/pages/3-cpp-accmulate.mdx
@@ -1,7 +1,7 @@
 ---
 title: C++ std::accmulate 함수 주의점
-tags: [TIL]
-categories: [ps, codeforces]
+tags: [TIL, ps]
+categories: [codeforces]
 style: fill
 color: danger
 date: 2022-11-04 00:22:30
