--- a/pages/5-cf-CodeTON-r3.mdx
+++ b/pages/5-cf-CodeTON-r3.mdx
@@ -1,7 +1,7 @@
 ---
 title: CodeTON r3 후기 (codeforces div1+div2)
-tags: [ps, codeforces]
-categories: [ps, codeforces]
+tags: [ps]
+categories: [codeforces]
 style: fill
 color: secondary
 date: 2022-11-07 00:23:00
