--- a/pages/1-DYTECHLAB-Cup-2022.mdx
+++ b/pages/1-DYTECHLAB-Cup-2022.mdx
@@ -1,7 +1,7 @@
 ---
 title: DYTECHLAB Cup 2022 후기 (codeforces div1+div2)
-tags: [ps, codeforces]
-categories: [ps, codeforces]
+tags: [ps]
+categories: [codeforces]
 date: 2022-10-10 00:01:00
 description: 오랜만에 다시 시작한 코드포스
 section: "blog1"
