--- a/pages/4-well-known.mdx
+++ b/pages/4-well-known.mdx
@@ -1,7 +1,7 @@
 ---
 title: 어디서 나올법한 웰논 모음집(22-11-07 수정)
 tags: [ps]
-categories: [ps, codeforces]
+categories: [etc]
 style: fill
 color: secondary
 date: 2022-11-06 00:23:00
