--- a/pages/6-2022-Goricon.mdx
+++ b/pages/6-2022-Goricon.mdx
@@ -1,7 +1,7 @@
 ---
 title: 2022 Goricon 출제 후기
 tags: [ps]
-categories: [ps, codeforces]
+categories: [problem setting]
 style: fill
 color: primary
 date: 2022-11-15 00:23:00
