--- a/pages/7-gatsby-migration.mdx
+++ b/pages/7-gatsby-migration.mdx
@@ -4,11 +4,11 @@ tags: [react, gatsby]
 categories: [blog]
 date: 2023-10-03
 ---
-# 블로그 또 이사?
+## 블로그 또 이사?
 벌써 3번째 이사중이다. 처음에는 tistory를 이용했는데 커스터마이징이 부족하다고 느껴서 jekyll로 갔다가 ruby on rails에 익숙하지 않아 사실상 블랙박스로 사용하다 보니 막상 커스터마이징은 하지도 않았다.
 이번엔 개츠비로 이사했는데 프론트는 잘 모르지만 그나마 리액트 네이티브를 해본 적이 있어 리액트와 typescript에 어느정도 발은 담가놓은 상태였다.
 
-# 부족한 themes
+## 부족한 themes
 개츠비는 jekyll, Hugo등 다른 정적 웹사이트 생성 프레임워크에 비해 템플릿이 부족한 느낌이었다. [https://www.gatsbyjs.com/starters](https://www.gatsbyjs.com/starters) 여기에 좋은 템플릿이 많지만 마음에 드는 건 없어서 Hugo 템플릿 중 하나[https://github.com/leafee98/hugo-theme-flat](https://github.com/leafee98/hugo-theme-flat) 를 가져와 개츠비에 맞게 수정했다.
 
 먼저, 이 자리를 빌어 블로그 이사에 많은 도움을 준 [@kasterra](https://github.com/kasterra) 학부 선배님한테 감사의 말을 전한다.
@@ -16,11 +16,11 @@ date: 2023-10-03
 프로젝트 구조는 단순했다. 기존 프로젝트는 html/css로 되어있었고 각 html을 리액트에 맞게 tsx로 바꾸는 작업은 chatGPT가 열심히 해 줬다. 개츠비로 빈 프로젝트를 생성 후 layout/index.html을 메인 페이지인 post-list.tsx로 마이그레이션 후 나머지 파일도 적당히 html로 쓰인 파일을 tsx로 바꿔주는 작업이 주였다.
 그렇게 뼈대를 잡은 후 static/css파일을 src/css로 옮겨서 각 페이지별로 적용시켜주면 되는 일이었다. 라고 생각했지만 생각보다 순조롭지는 않았던 게 문제였다.
 
-# 문제!
-## chatGPT가 학습한 자료가 최신이 아니었다.
+## 문제!
+### chatGPT가 학습한 자료가 최신이 아니었다.
 생각보다 간단한 이슈였는데 graphQL에서 deprecated된 방법으로 데이터를 정렬하고 있어 직접 쿼리를 수정해줬다.
 
-## 메인 페이지에서 포스트가 최신 순으로 보이지 않았다.
+### 메인 페이지에서 포스트가 최신 순으로 보이지 않았다.
 post-list.tsx에서 graphql로 포스트 데이터를 가져온 후 map으로 순회하면서 보여주는 방식인데 데이터를 그냥 가져오니까 순서가 뒤죽박죽이었다.
 
 예전 블로그에서 md파일을 작성할 때 yyyy-mm-dd-제-목.md 형식으로 작성했는데 처음에는 date부분을 가져와서 순서대로 정렬하려고 생각했지만 하루에 여러 포스트를 작성할 때 꼬일 수 있을 위험이 있어서 파일 제목에 date를 빼버리고 포스트를 작성한 순서대로 번호를 붙였다.
@@ -74,7 +74,7 @@ query postList {
 ```
 </CH.Code>
 
-# SSR vs CSR
+### SSR vs CSR
 개츠비는 동적 사이트(React.js)를 정적 사이트(html, css, js)로 바꿔주는 프레임워크다. 여기서 일단 SSR과 CSR의 차이를 모르고 그냥 사용하면 당할 수 밖에 없는 부분이 존재했다.
 
 * SSR(Server-Side Rendering)의 경우 서버에서 모든 렌더링을 처리해서 클라이언트에 전달한다. 이 과정에서 클라이언트는 동적으로 페이지를 생성하지 않는다.(정적 사이트)
@@ -95,7 +95,7 @@ flags: {
   }
 ```
 
-## Hydration failed
+### Hydration failed
 **개츠비를 사용하면서 절대 body에 CSS flex 속성을 주지 말자!!!**
 
 단순히 date가 깨지는 문제만 있었으면 얼마나 좋았겠는가.. 현실은 그렇지 않았다.
@@ -108,7 +108,7 @@ Hydration failed 에러가 나는 이유는 간단하게 SSR과 CSR이 달라서
 자세히는 모르지만 CSR에서는 body밑에 내가 적용하고 싶은 태그에 CSS가 적용된 후 div 태그가 삽입된 것 아닌가 하는 추측을 했다. 따라서 body에 있는 CSS 속성이 적용돼야 하는 곳을 div로 감싸고 거기에 적용시켰더니 해결됐다.
 
 
-# 결론과 TODO
+## 결론과 TODO
 이 글을 쓰는 시점에서는 사이트 링크를 누르다보면 404가 나온다던가 하는 미완성인 부분이 아직 많이 존재한다. 이번에 개츠비로 옮기면서 SSR이랑 CSR에 대해서는 확실히 짚고 넘어갈 수 있었다...
 앞으로 해야할 것 중 당장 생각나는건
 
